# data-polish

./: .env.example  .gitignore  PROJECT_NOTES.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  samconfig.toml  template.yaml
.streamlit/: config.toml  secrets.example.toml
api/: __init__.py  audit.py  auth.py  cloud_storage.py  db.py  jobs.py  magic_link.py  main.py  models.py  pipeline_runner.py  storage.py  user_store.py
docs/: aws_deployment.md  operations.md  prompt_iterations.md  resend_domain.md  v2_deployment.md
lambda/: Dockerfile  lambda_function.py  requirements-lambda.txt
scripts/: apply_cleaning.py  dev.sh  download_311_sample.py  init_auth.py  profile_dataset.py  propose_cleaning.py  run_agent.py  smoke_test_groq.py
src/datapolish/: __init__.py  agent.py  apply.py  cleaning.py  config.py  llm_client.py  profile.py  quality.py
tests/: test_agent.py  test_api.py  test_apply.py  test_cleaning.py  test_lambda.py  test_pipeline_runner.py  test_profile.py  test_quality.py  test_smoke.py
ui/: Home.py  __init__.py  api_client.py  auth_helpers.py
ui/pages/: 1_Upload.py  2_Run.py  3_Results.py  4_Activity.py
